bk_ida/gccida/c3/expand_asm_operands
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_asm_operands/src/stmt.c:2060:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_asm_operands/src/stmt.c:2061:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_asm_operands/src/stmt.c:2062:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_asm_operands/src/stmt.c:2080:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_asm_operands/src/stmt.c:2100:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v47; // [rsp+3Ch] [rbp-1B4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_asm_operands/src/stmt.c:2103:5: error: expected ';' after expression
tree v50; // [rsp+48h] [rbp-1A8h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_asm_operands/src/stmt.c:2103:6: error: use of undeclared identifier 'v50'
tree v50; // [rsp+48h] [rbp-1A8h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_asm_operands/src/stmt.c:2107:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+64h] [rbp-18Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_asm_operands/src/stmt.c:2121:5: error: expected ';' after expression
tree qual_type; // [rsp+D8h] [rbp-118h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_asm_operands/src/stmt.c:2121:6: error: use of undeclared identifier 'qual_type'
tree qual_type; // [rsp+D8h] [rbp-118h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_asm_operands/src/stmt.c:2123:5: error: expected ';' after expression
tree type_1; // [rsp+E8h] [rbp-108h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_asm_operands/src/stmt.c:2123:6: error: use of undeclared identifier 'type_1'
tree type_1; // [rsp+E8h] [rbp-108h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_asm_operands/src/stmt.c:2124:5: error: expected ';' after expression
tree val_1; // [rsp+F0h] [rbp-100h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_asm_operands/src/stmt.c:2124:6: error: use of undeclared identifier 'val_1'
tree val_1; // [rsp+F0h] [rbp-100h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_asm_operands/src/stmt.c:2131:5: error: expected ';' after expression
tree type_0; // [rsp+108h] [rbp-E8h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_asm_operands/src/stmt.c:2131:6: error: use of undeclared identifier 'type_0'
tree type_0; // [rsp+108h] [rbp-E8h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_asm_operands/src/stmt.c:2132:5: error: expected ';' after expression
tree val_0; // [rsp+110h] [rbp-E0h] 
    ^
    ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_asm_operands/src/stmt.c:2132:6: error: use of undeclared identifier 'val_0'
tree val_0; // [rsp+110h] [rbp-E0h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_asm_operands/src/stmt.c:2140:5: error: expected ';' after expression
tree type; // [rsp+130h] [rbp-C0h] 
    ^
    ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_asm_operands/src/obj/stmt.o] Error 1
